--- a/project.json
+++ b/project.json
@@ -9,7 +9,8 @@
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "dist/me"
+        "outputPath": "build/me",
+        "base": "/me"
       },
       "configurations": {
         "development": {
