--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://martinr0x.github.io/me/",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --dist build/me",
+    "deploy": "gh-pages -d build --dist build/ ",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test"
@@ -34,7 +34,7 @@
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.2.21",
+    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
