--- a/project.json
+++ b/project.json
@@ -6,11 +6,13 @@
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
-        "outputPath": "build/me",
-        "base": "/me"
+        "outputPath": "build/",
+        "base": "/"
       },
       "configurations": {
         "development": {
@@ -55,7 +57,9 @@
     },
     "test": {
       "executor": "@nx/vite:test",
-      "outputs": ["coverage/me"],
+      "outputs": [
+        "coverage/me"
+      ],
       "options": {
         "passWithNoTests": true,
         "reportsDirectory": "coverage/me"
@@ -63,9 +67,13 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["./src/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "./src/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "serve-static": {
