--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://martinr0x.github.io/me/",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --dist build/ ",
+    "deploy": "gh-pages -d build --dist build/ --cname martin.bogusz.dev ",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test"
@@ -50,7 +50,7 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.1.1",
     "jsdom": "~22.1.0",
     "nx": "16.5.2",
     "postcss": "8.4.21",
